Closed Bug 349951 Opened 17 years ago Closed 17 years ago

incorrect LOG statement for no pollable event

Categories

(Core :: Networking, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: Biesinger, Assigned: Biesinger)

Details

(Keywords: fixed1.8.1)

Attachments

(1 file)

http://lxr.mozilla.org/seamonkey/source/netwerk/base/src/nsSocketTransportService2.cpp#376
376         NS_WARN_IF_FALSE(mThreadEvent,
377                 "running socket transport thread without a pollable event");
378         LOG(("running socket transport thread without a pollable event"));

The LOG statement needs to be conditional
Attached patch patchSplinter Review
very low risk patch... just fixes some logging code
Attachment #235171 - Flags: superreview?(darin)
Attachment #235171 - Flags: review?(darin)
Attachment #235171 - Flags: approval1.8.1?
Attachment #235171 - Flags: superreview?(darin)
Attachment #235171 - Flags: superreview+
Attachment #235171 - Flags: review?(darin)
Attachment #235171 - Flags: review+
Comment on attachment 235171 [details] [diff] [review]
patch

a=beltzner on behalf of drivers for the MOZILLA_1_8_BRANCH
Attachment #235171 - Flags: approval1.8.1? → approval1.8.1+
HEAD:
Checking in nsSocketTransportService2.cpp;
/cvsroot/mozilla/netwerk/base/src/nsSocketTransportService2.cpp,v  <--  nsSocketTransportService2.cpp
new revision: 1.24; previous revision: 1.23
done

MOZILLA_1_8_BRANCH:
Checking in nsSocketTransportService2.cpp;
/cvsroot/mozilla/netwerk/base/src/nsSocketTransportService2.cpp,v  <--  nsSocketTransportService2.cpp
new revision: 1.20.4.2; previous revision: 1.20.4.1
done
Status: NEW → RESOLVED
Closed: 17 years ago
Keywords: fixed1.8.1
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.