bug 349951 fix log statement to only log the message when the condition is true, not always. r+sr=darin a=beltzner